# Snake

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Game.cpp.469C5745714C818F.idx  Game.hpp.852CC4BC6AA51B6A.idx  Snake.cpp.92FA9442D5961B3C.idx  Snake.hpp.E7F8500FDF593A73.idx  main.cpp.F075613360FF14A9.idx
include/: Game.hpp  Menu.hpp  ScoreManager.hpp  Snake.hpp
src/: Game.cpp  Menu.cpp  ScoreManager.cpp  Snake.cpp  main.cpp
